# MPC-motion-planner_Master-Thesis

joy/: rosrun.sh
mpc_planning/: CMakeLists.txt  package.xml
mpc_planning/include/: iLQRsolver.h  mpc_planning_node.h
mpc_planning/launch/: control_traxxas.launch
mpc_planning/src/: mpc_planning_node.cpp
testcar_description/: CMakeLists.txt  package.xml  testcar.rviz
testcar_description/launch/: urdf_into_rviz.launch
testcar_description/urdf/: testcar.urdf
