<?xml version="1.0"?>
<package>
  <name>mpc_planning</name>
  <version>0.0.1</version>
  <description>mpc_planning</description>
  <license>Apache License 2.0</license>
  <author email="chanhoko@kaist.ac.kr">Chanho Ko</author>
  <maintainer email="chanhoko@kaist.ac.kr">Chanho Ko</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <export></export>
</package>
